--- a/Лабораторная работа №7/Project1/backup/unit1.lfm
+++ b/Лабораторная работа №7/Project1/backup/unit1.lfm
@@ -5,8 +5,8 @@ object Form1: TForm1
   Width = 392
   ActiveControl = ListBox1
   Caption = 'Form1'
-  ClientHeight = 143
-  ClientWidth = 392
+  ClientHeight = 0
+  ClientWidth = 0
   OnCreate = FormCreate
   LCLVersion = '2.2.4.0'
   object Label1: TLabel
@@ -45,12 +45,13 @@ object Form1: TForm1
     AnchorSideLeft.Side = asrCenter
     AnchorSideTop.Control = Label3
     AnchorSideTop.Side = asrBottom
-    Left = 307
-    Height = 1
+    Left = 304
+    Height = 15
     Top = 71
-    Width = 1
+    Width = 6
     Alignment = taCenter
     BorderSpacing.Top = 15
+    Caption = '1'
     ParentColor = False
   end
   object ListBox1: TListBox
