--- a/Лабораторная работа №3/Project1/unit1.lfm
+++ b/Лабораторная работа №3/Project1/unit1.lfm
@@ -1,69 +1,70 @@
 object Form1: TForm1
-  Left = 183
-  Height = 165
-  Top = 31
-  Width = 320
+  Left = 361
+  Height = 153
+  Top = 158
+  Width = 286
   Caption = 'Диалог'
-  ClientHeight = 0
-  ClientWidth = 0
+  ClientHeight = 153
+  ClientWidth = 286
+  DesignTimePPI = 83
   LCLVersion = '2.2.4.0'
   object Label1: TLabel
-    Left = 24
-    Height = 13
-    Top = 16
-    Width = 185
+    Left = 21
+    Height = 18
+    Top = 14
+    Width = 210
     Caption = 'Введите своё имя и нажмите Enter'
     ParentColor = False
   end
   object Label2: TLabel
-    Left = 24
+    Left = 21
     Height = 1
-    Top = 68
+    Top = 59
     Width = 1
     ParentColor = False
   end
   object Label3: TLabel
-    Left = 24
+    Left = 21
     Height = 1
-    Top = 93
+    Top = 80
     Width = 1
     ParentColor = False
   end
   object Button1: TButton
-    Left = 229
-    Height = 25
-    Top = 56
-    Width = 75
+    Left = 198
+    Height = 22
+    Top = 48
+    Width = 65
     Caption = 'Да'
     OnClick = Button1Click
     TabOrder = 0
     Visible = False
   end
   object Button2: TButton
-    Left = 229
-    Height = 25
-    Top = 88
-    Width = 75
+    Left = 198
+    Height = 22
+    Top = 76
+    Width = 65
     Caption = 'Нет'
     OnClick = Button2Click
     TabOrder = 1
     Visible = False
   end
   object Edit1: TEdit
-    Left = 224
-    Height = 21
+    Left = 194
+    Height = 36
     Hint = 'Введите своё имя и нажмите Enter'
-    Top = 12
-    Width = 80
+    Top = 10
+    Width = 69
     MaxLength = 15
     OnKeyPress = Edit1KeyPress
     TabOrder = 2
   end
   object BitBtn1: TBitBtn
-    Left = 229
-    Height = 30
-    Top = 128
-    Width = 75
+    Left = 198
+    Height = 26
+    Top = 111
+    Width = 65
     DefaultCaption = True
     Kind = bkClose
     ModalResult = 11
