--- a/Лабораторная работа №6/Project1/unit1.lfm
+++ b/Лабораторная работа №6/Project1/unit1.lfm
@@ -1,39 +1,40 @@
 object Form1: TForm1
-  Left = 345
-  Height = 216
-  Top = 58
-  Width = 346
+  Left = 488
+  Height = 187
+  Top = 147
+  Width = 299
   Caption = 'Form1'
-  ClientHeight = 216
-  ClientWidth = 346
+  ClientHeight = 187
+  ClientWidth = 299
+  DesignTimePPI = 83
   OnCreate = FormCreate
   LCLVersion = '2.2.4.0'
   object RedPanel: TPanel
     AnchorSideLeft.Side = asrCenter
-    Left = 8
-    Height = 58
-    Top = 6
-    Width = 58
+    Left = 4
+    Height = 50
+    Top = 2
+    Width = 50
     Anchors = []
     Color = 122
     ParentColor = False
     TabOrder = 0
   end
   object GreenPanel: TPanel
-    Left = 84
-    Height = 58
-    Top = 6
-    Width = 58
+    Left = 69
+    Height = 50
+    Top = 2
+    Width = 50
     Anchors = []
     Color = 31232
     ParentColor = False
     TabOrder = 1
   end
   object BluePanel: TPanel
-    Left = 159
-    Height = 58
-    Top = 6
-    Width = 56
+    Left = 134
+    Height = 50
+    Top = 2
+    Width = 48
     Anchors = []
     Color = 7995392
     ParentColor = False
@@ -44,11 +45,11 @@ object Form1: TForm1
     AnchorSideLeft.Side = asrCenter
     AnchorSideTop.Control = RedPanel
     AnchorSideTop.Side = asrBottom
-    Left = 29
-    Height = 121
-    Top = 89
-    Width = 17
-    BorderSpacing.Top = 25
+    Left = 22
+    Height = 105
+    Top = 74
+    Width = 15
+    BorderSpacing.Top = 22
     Kind = sbVertical
     Max = 255
     PageSize = 0
@@ -61,11 +62,11 @@ object Form1: TForm1
     AnchorSideLeft.Side = asrCenter
     AnchorSideTop.Control = GreenPanel
     AnchorSideTop.Side = asrBottom
-    Left = 105
-    Height = 121
-    Top = 89
-    Width = 17
-    BorderSpacing.Top = 25
+    Left = 87
+    Height = 105
+    Top = 74
+    Width = 15
+    BorderSpacing.Top = 22
     Kind = sbVertical
     Max = 255
     PageSize = 0
@@ -78,11 +79,11 @@ object Form1: TForm1
     AnchorSideLeft.Side = asrCenter
     AnchorSideTop.Control = BluePanel
     AnchorSideTop.Side = asrBottom
-    Left = 179
-    Height = 121
-    Top = 89
-    Width = 17
-    BorderSpacing.Top = 25
+    Left = 151
+    Height = 105
+    Top = 74
+    Width = 15
+    BorderSpacing.Top = 22
     Kind = sbVertical
     Max = 255
     PageSize = 0
@@ -95,11 +96,11 @@ object Form1: TForm1
     AnchorSideLeft.Side = asrCenter
     AnchorSideTop.Control = RedPanel
     AnchorSideTop.Side = asrBottom
-    Left = 28
-    Height = 15
-    Top = 69
-    Width = 18
-    BorderSpacing.Top = 5
+    Left = 19
+    Height = 18
+    Top = 56
+    Width = 21
+    BorderSpacing.Top = 4
     Caption = '122'
     ParentColor = False
   end
@@ -108,11 +109,11 @@ object Form1: TForm1
     AnchorSideLeft.Side = asrCenter
     AnchorSideTop.Control = GreenPanel
     AnchorSideTop.Side = asrBottom
-    Left = 104
-    Height = 15
-    Top = 69
-    Width = 18
-    BorderSpacing.Top = 5
+    Left = 84
+    Height = 18
+    Top = 56
+    Width = 21
+    BorderSpacing.Top = 4
     Caption = '122'
     ParentColor = False
   end
@@ -121,19 +122,19 @@ object Form1: TForm1
     AnchorSideLeft.Side = asrCenter
     AnchorSideTop.Control = BluePanel
     AnchorSideTop.Side = asrBottom
-    Left = 178
-    Height = 15
-    Top = 69
-    Width = 18
-    BorderSpacing.Top = 5
+    Left = 148
+    Height = 18
+    Top = 56
+    Width = 21
+    BorderSpacing.Top = 4
     Caption = '122'
     ParentColor = False
   end
   object FinalColorPanel: TPanel
-    Left = 232
-    Height = 96
-    Top = 40
-    Width = 98
+    Left = 201
+    Height = 83
+    Top = 35
+    Width = 85
     Color = 8026746
     ParentColor = False
     TabOrder = 6
